// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal 测试forceRender 1`] = `
<div
  class="xl-modal__wrap"
  style="z-index: 0; display: none;"
>
  <div
    class="xl-modal"
    style="width: 520px;"
  >
    <button
      class="xl-modal__icon"
    >
      <span
        class="xl-modal__icon-x"
      >
        <i
          class="xl-icon"
        >
          <svg
            fill="currentColor"
            style="height: 1em; width: 1em;"
            viewBox="0 0 352 512"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </i>
      </span>
    </button>
    <div
      class="xl-modal__header"
    >
      <div
        class="xl-modal__title"
      >
        title
      </div>
    </div>
    <div
      class="xl-modal__body"
    >
      content
    </div>
    <div
      class="xl-modal__footer"
    >
      <button
        class="xl-button xl-button--default xl-button--size-default"
      >
        <span>
          取消
        </span>
      </button>
      <button
        class="xl-button xl-button--primary xl-button--size-default"
      >
        <span>
          确定
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal 测试forceRender 2`] = `
<div
  class="xl-modal__wrap"
  style="z-index: 1002;"
>
  <div
    class="xl-modal"
    style="width: 520px;"
  >
    <button
      class="xl-modal__icon"
    >
      <span
        class="xl-modal__icon-x"
      >
        <i
          class="xl-icon"
        >
          <svg
            fill="currentColor"
            style="height: 1em; width: 1em;"
            viewBox="0 0 352 512"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </i>
      </span>
    </button>
    <div
      class="xl-modal__header"
    >
      <div
        class="xl-modal__title"
      >
        title
      </div>
    </div>
    <div
      class="xl-modal__body"
    >
      content
    </div>
    <div
      class="xl-modal__footer"
    >
      <button
        class="xl-button xl-button--default xl-button--size-default"
      >
        <span>
          取消
        </span>
      </button>
      <button
        class="xl-button xl-button--primary xl-button--size-default"
      >
        <span>
          确定
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal 测试title 1`] = `
<div
  class="xl-modal__wrap"
  style="z-index: 1004;"
>
  <div
    class="xl-modal"
    style="width: 520px;"
  >
    <button
      class="xl-modal__icon"
    >
      <span
        class="xl-modal__icon-x"
      >
        <i
          class="xl-icon"
        >
          <svg
            fill="currentColor"
            style="height: 1em; width: 1em;"
            viewBox="0 0 352 512"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </i>
      </span>
    </button>
    <div
      class="xl-modal__header"
    >
      <div
        class="xl-modal__title"
      >
        title
      </div>
    </div>
    <div
      class="xl-modal__body"
    >
      content
    </div>
    <div
      class="xl-modal__footer"
    >
      <button
        class="xl-button xl-button--default xl-button--size-default"
      >
        <span>
          取消
        </span>
      </button>
      <button
        class="xl-button xl-button--primary xl-button--size-default"
      >
        <span>
          确定
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal 测试title 2`] = `
<div
  class="xl-modal__wrap"
  style="z-index: 1004;"
>
  <div
    class="xl-modal"
    style="width: 520px;"
  >
    <button
      class="xl-modal__icon"
    >
      <span
        class="xl-modal__icon-x"
      >
        <i
          class="xl-icon"
        >
          <svg
            fill="currentColor"
            style="height: 1em; width: 1em;"
            viewBox="0 0 352 512"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </i>
      </span>
    </button>
    <div
      class="xl-modal__header"
    >
      <div>
        title
      </div>
    </div>
    <div
      class="xl-modal__body"
    >
      content
    </div>
    <div
      class="xl-modal__footer"
    >
      <button
        class="xl-button xl-button--default xl-button--size-default"
      >
        <span>
          取消
        </span>
      </button>
      <button
        class="xl-button xl-button--primary xl-button--size-default"
      >
        <span>
          确定
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal 测试visible和onVisibleChange 1`] = `null`;

exports[`Modal 测试visible和onVisibleChange 2`] = `
<div
  class="xl-modal__wrap"
  style="z-index: 1001;"
>
  <div
    class="xl-modal"
    style="width: 520px;"
  >
    <button
      class="xl-modal__icon"
    >
      <span
        class="xl-modal__icon-x"
      >
        <i
          class="xl-icon"
        >
          <svg
            fill="currentColor"
            style="height: 1em; width: 1em;"
            viewBox="0 0 352 512"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </i>
      </span>
    </button>
    <div
      class="xl-modal__header"
    >
      <div
        class="xl-modal__title"
      >
        title
      </div>
    </div>
    <div
      class="xl-modal__body"
    >
      content
    </div>
    <div
      class="xl-modal__footer"
    >
      <button
        class="xl-button xl-button--default xl-button--size-default"
      >
        <span>
          取消
        </span>
      </button>
      <button
        class="xl-button xl-button--primary xl-button--size-default"
      >
        <span>
          确定
        </span>
      </button>
    </div>
  </div>
</div>
`;
